examples/type_system/failing/114_keyword_alias_case.flx
fn main() -> Unit {
    case 1 {
        0 -> 0,
        _ -> 1,
    }
}
